@@ -57,7 +57,8 @@ enum conf_setting_type {
 
 enum conf_metadata_mergekey {
     Metadata_mergekey_no,
-    Metadata_mergekey_yes
+    Metadata_mergekey_optional,
+    Metadata_mergekey_required
 };
 
 // Describes known metadata elements and how they are to be manipulated
