@@ -1,3 +1,9 @@
+The metadata attribute 'mergekey' now takes one of three values 'no',
+'required', 'optional' .  And the resulting mergekey from metadata
+is now ordered in the same way as metadata in the service definition.
+Older Pazpar2 version use the order in which metadata appeared in a
+record instance.
+
 Pazpar2 allows YAZ log level to be set (option -v).
 
 --- 1.2.1 2009/10/05
